Add default .ent-search index